--- a/VRChat/68/1222368.html
+++ b/VRChat/68/1222368.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cDp3lB8umFxCVziWB9yuFNxjQRsO6bykzXxIFC8PTo0="></script>
+    "tA+dFtgY0a3sWj9gzBZv0lc6UxDs3hZ8uUMEG+eGQbQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】映画でよく見る錠剤を入れておく\"あれ\"","description":"■概要\n映画でよく見る錠剤入れです。(正式名称は分かりませんが\"prescription pill bottle\"で検索すると出てくるアレです)\n※錠剤は入っていません。\n\nUnityのスタンダードシェーダを使用していますが、ご自身の用意したシェーダに変えていただいても問題ないと思います。\n\nキャラクターに持たせたり、デスクや洗面所の鏡棚に配置したりして、薬に頼ったVRChat生活を送ろう！！！\n\n\n■ポリゴン数\n\tキャップ ： △384\n\tケース   ： △320\n----------------------------------\n\t計       ： △704\n\n\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n　　　　利用規約\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n■ 利用について\n当モデルデータに付属しているデータの改変は自由です。\n本素材に関しては、営利、非営利を問わず\nゲーム、映像作品、動画配信等にご利用いただけます。\n※ Unreal Engine 4, MMD等ソフトウェア問わずご利用いただけます。\n\n■ 禁止事項\n公序良俗に反する行為や目的、政治、宗教活動、他者に対する誹謗中傷目的での利用を禁止します。\nまた、当モデルデータに付属しているデータの再配布、販売は改変の有無を問わず禁止します。\n\n■ 免責事項\n当モデルを利用することで発生したトラブルや損失、損害に対して、製作者は一切責任を負いません。\n当モデルを使用する際は利用者の責任において行ってください。\n\n(c) 2019 sHis-O All Rights Reserved.","url":"https://booth.pm/ja/items/1222368","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/7ca3111a-7582-42a2-96fa-d07477355aaa/i/1222368/75670880-ef67-4afc-bee0-a4250885be53_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cDp3lB8umFxCVziWB9yuFNxjQRsO6bykzXxIFC8PTo0="></script>
+    nonce="tA+dFtgY0a3sWj9gzBZv0lc6UxDs3hZ8uUMEG+eGQbQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1222368/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               164
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1222368/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               164
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
