--- a/VRChat/18/1222018.html
+++ b/VRChat/18/1222018.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NHma/GFCDI58gzU9ICRjarvCWLPCXUkkSMq3bFwCx8s="></script>
+    "kA9Qs+btrSxRqD5RFTcmGCRU0W2hlIR/Bmj679trPUM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボクセルモデル「L-fin」","description":"お手伝いロボットのボクセルアバター。\n\n■三角ポリゴン数　6544\n着せ替えやアクセサリの追加用に抑えています\nお好きなようにおしゃれしてください。\n■VRM収録\n何かとゲームで使えるVRM形式を収録しました。\n■表情にも対応(全6種)\n笑ったり驚くシェイプの設定が入っています\n\nZIPの収録内容はこちらになります\n収録内容はこちらになります\n\n3Dデータ\n・Blenderデータ\n・FBXデータ\n・VRMデータ\n\n・各種テクスチャデータ\n・テクスチャ画像\n・emission用画像\n\n・readme(基本的にこちらに書いている物と同じ内容です)\n\nVRchatなどいろいろと使っていただいて大丈夫です。\nShaderはMToonがおすすめです。細かい設定などは\nVRMの形式のものに設定したものがありますので参考までにどうぞ\n(VRMをunityへインポートする方法などは各自調べていただくようにお願いいたします)\n\nVRchatなどいろいろと使っていただいて大丈夫です。\n(Shaderは影の不透明度を0にしたCubeds-Unity-Shadersがおすすめです)\n改造、着せ替えなどお好みでやっていただいて構いません。\n「こんな改造をしたよ」のなど報告していただけると私が喜びます。\n\n禁止していること\n・こちらの配布データ、改造したデータの配布、販売。\n・キャラクターを使った迷惑行為。\n・あまりにキャラのイメージを損なう使い方(これは悪意があるものだけです)\n\n「こういう使い方は大丈夫なのか」と言う場合は気軽にご相談くださいませ\nリリスラウダ研究所\nhttp://llauda.sakura.ne.jp/","url":"https://booth.pm/ja/items/1222018","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/cc738f2e-8e3a-4033-8b92-96e55ec269db/i/1222018/6b86ac0b-99cf-4136-87a1-4fef52e15790_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NHma/GFCDI58gzU9ICRjarvCWLPCXUkkSMq3bFwCx8s="></script>
+    nonce="kA9Qs+btrSxRqD5RFTcmGCRU0W2hlIR/Bmj679trPUM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1222018/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1222018/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
