--- a/VRChat/15/1221215.html
+++ b/VRChat/15/1221215.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UAqw4eT4FChkHdCMlkNczEpY4VdE8PpOY3edOi0LIUw="></script>
+    "VKk2I81ZjIBRmNn2QFMJslPdK+MSf3hNYB9S+5IVyUE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[vrchat向けアクセサリー]マスク[3dmodel]","description":"インフル流行ってるやん。\nというわけでマスク配ります。\nボーン仕込んであるので、大抵のモデルにはフィットすると思います。\n\n\n※本製品はVRChat等アプリケーション、ゲームでの使用を想定しております。\n\n\nフォルダ構成\n・mask.fbx（モデルデータ本体）\n・mask.png（テクスチャデータ）\n・mask.unitypackage（Unityに簡単にインポートできるやつ）\n・Readme.txt（再配布・転売しないでねとか書いてる）","url":"https://booth.pm/ja/items/1221215","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/af408fff-8f2f-4597-bdb6-d798cc3f700e/i/1221215/115fd2f5-b9b1-48f2-93ed-e03b06463078_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UAqw4eT4FChkHdCMlkNczEpY4VdE8PpOY3edOi0LIUw="></script>
+    nonce="VKk2I81ZjIBRmNn2QFMJslPdK+MSf3hNYB9S+5IVyUE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1221215/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               300
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1221215/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               300
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
