--- a/VRChat/34/1381234.html
+++ b/VRChat/34/1381234.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zLdK9kW8jm9YBt9V4cyCo8agK/3WY5KiZ2fuiR5pFqI="></script>
+    "810rIq16zPYJpUmWeM8mNo3tuRmF85nr67RLHSsiQLA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC想定アニメーション詰め合わせVer.3","description":"VRChatを想定し開発したアニメーションです\n気が向いたら逐次追加します\n\n【内容】\n[Emote]\n5/21～\n・腰トラ(前)\n・腰トラ(後)\n・腰トラ(右)\n・腰トラ(左)\n5/23～\n・腰トラ(埋)\n・腰トラ(ログアウトA)\n・腰トラ(ログアウトB)\n・腰トラ(ログアウトC)\n\n[HandSign]\n5/22～\n・Call\n・Chop\n・Fingerpoint\n・Fist\n・Handgun\n・Handopen\n・Love\n・OK\n・Promise\n・Rocknroll\n・Thumbsup\n・Victory\n5/23～\n・Fox\n\n※アバターによっては想定外の挙動をすることがあります。\nその場合はVeryAnimation等で再編集することをおすすめします。\n\n【利用規約】\n商用利用　不可(但し内容によっては許可するので要相談)\n改変後の二次配布　不可(但し以下略)\nアバターペデスタルやワールドでの使用　可(但しワールドはprivateのみ)\nR18、R18‐Gへの使用　可\n\n利用規約が更新された場合は最新のものが適用されます\n\n\n【更新履歴】\n5/21 Ver.1\n5/22 Ver.2\n5/23 Ver.3\n\n不具合等あれば報告お願いします","url":"https://booth.pm/ja/items/1381234","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"104"},"image":"https://booth.pximg.net/c/620x620/867d2324-2658-4bb8-b5cd-6d3213e2ff63/i/1381234/9bdbf0ae-3341-4ab6-b27e-70e040ee0fdd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zLdK9kW8jm9YBt9V4cyCo8agK/3WY5KiZ2fuiR5pFqI="></script>
+    nonce="810rIq16zPYJpUmWeM8mNo3tuRmF85nr67RLHSsiQLA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1381234/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               168
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1381234/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               168
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
