--- a/VRChat/31/1380531.html
+++ b/VRChat/31/1380531.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Q9YQKKDHFgalspsqKrizxanEFy1NibYOH2cXbixGGnE="></script>
+    "PKLMELnhvTDLu0R9F1jwYkzPPd6zAk5FZm3tO6XJTNI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料]抱き枕","description":"[抱き枕]\nポリゴン数　　256\nマテリアル数　2\nVRCで撮ったSSを抱き枕にすることができます\n\n+利用規約\n営利/非営利問わずご利用いただけます。\n再配布は禁止とさせていただきます。\n本モデルデータを使用することによって何らかのトラブル・損失及び損害等が発生した場合でも当方は一切の責任を負いません。\n\n+お問い合わせ\ntwitter:Sarria____","url":"https://booth.pm/ja/items/1380531","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1d14c665-3ae2-443e-9d88-4fc1502813e4/i/1380531/5e6bd9ed-289e-40d2-82bc-07c1f6753f71_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Q9YQKKDHFgalspsqKrizxanEFy1NibYOH2cXbixGGnE="></script>
+    nonce="PKLMELnhvTDLu0R9F1jwYkzPPd6zAk5FZm3tO6XJTNI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1380531/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               278
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1380531/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               278
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
