--- a/VRChat/91/1377191.html
+++ b/VRChat/91/1377191.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xhK5hGf2qdqAKrLqN95ShCwguQV96RebexT6kMbT8OE="></script>
+    "1ExMiz2evHpzPH93DxxNXvcTfScl1IqdTmyUZDROS8g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ローポリ魚肉のソーセージモデル","description":"剥き方で論争が起きるタイプのソーセージの3Dモデルです。\n改変しようが無いと思いますが、お好きなようにお使いください。公序良俗に違反しない範囲で。\n\n・Tris：716\n・テクスチャ解像度：256×256\n・テクスチャ数：1枚\n・マテリアル数：1","url":"https://booth.pm/ja/items/1377191","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/f215380d-1931-4039-9529-a102e7243a1f/i/1377191/f5cd2644-b18e-4a86-9948-9c797f91e429_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xhK5hGf2qdqAKrLqN95ShCwguQV96RebexT6kMbT8OE="></script>
+    nonce="1ExMiz2evHpzPH93DxxNXvcTfScl1IqdTmyUZDROS8g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1377191/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               18
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1377191/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               18
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
